--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -415,3 +415,15 @@ footer a:focus {
 .post-thumbnail img:hover {
   transform: scale(1.03);
 }
+
+.imagen-circular {
+  width: 150px;
+  height: 150px;
+  object-fit: cover;
+  border-radius: 50%;
+  box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+}
+
+.imagen-poligono {
+  clip-path: polygon(50% 0%, 100% 38%, 82% 100%, 18% 100%, 0% 38%);
+}
