--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,21 +5,22 @@ layout: default
 <article class="post container-fluid px-0">
 
   {% if page.hero_image %}
-    <div class="post-hero-image w-100 mb-5 position-relative overflow-hidden"
+    <div class="post-hero-image w-100 mb-5 position-relative"
          style="background-image: url('{{ page.hero_image | relative_url }}');
                 background-size: cover;
                 background-position: center;
                 height: 300px;">
 
       <!-- Partículas -->
-      <div id="particles-js" class="position-absolute top-0 start-0 w-100 h-100"></div>
+      <div id="particles-js" 
+        class="position-absolute top-0 start-0 w-100 h-100; width: 100%; height: 100%; z-index: 0;"></div>
 
       <!-- Contenido centrado -->
       <div class="position-relative z-1 d-flex align-items-center justify-content-center h-100">
         <div class="text-center text-white bg-dark bg-opacity-50 p-4 rounded">
-          <h1 class="display-3 fw-bold text-title">{{ page.title }}</h1>
+          <h1 class="display-3 fw-bold text-verde-1">{{ page.title }}</h1>
           {% if page.subtitle %}
-            <p class="h4 text-subtitle">{{ page.subtitle }}</p>
+            <p class="lead mb-4">{{ page.subtitle }}</p>
           {% endif %}
         </div>
       </div>
