--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,8 +8,7 @@ layout: default
     <div class="post-hero-image w-100 mb-5 position-relative"
          style="background-image: url('{{ page.hero_image | relative_url }}');
                 background-size: cover;
-                background-position: center;
-                height: 300px;">
+                background-position: center;">
 
       <!-- Partículas -->
       <div id="particles-js" 
