--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,13 +6,15 @@ layout: default
 
   {% if page.hero_image %}
     <div class="post-hero-image w-100 mb-5 position-relative"
-         style="background-image: url('{{ page.hero_image | relative_url }}');
-                background-size: cover;
-                background-position: center;">
+      style="background-image: url('{{ page.hero_image | relative_url }}');
+            background-size: cover;
+            background-position: center;
+            min-height: 60vh;">
 
       <!-- Partículas -->
-      <div id="particles-js" 
-        class="position-absolute top-0 start-0 w-100 h-100; width: 100%; height: 100%; z-index: 0;"></div>
+      <div id="particles-js"
+        class="position-absolute top-0 start-0 w-100 h-100"
+        style="z-index: 0;"></div>
 
       <!-- Contenido centrado -->
       <div class="position-relative z-1 d-flex align-items-center justify-content-center h-100">
@@ -102,23 +104,3 @@ layout: default
     </nav>
   </div>
 </article>
-
-<!-- Partículas -->
-<script src="https://cdn.jsdelivr.net/npm/tsparticles@2/tsparticles.bundle.min.js"></script>
-<script>
-  tsParticles.load("particles-js", {
-    fullScreen: false,
-    background: { color: "transparent" },
-    particles: {
-      number: { value: 40 },
-      size: { value: 3 },
-      move: { enable: true, speed: 1 },
-      line_linked: { enable: true, opacity: 0.3 },
-    },
-    interactivity: {
-      events: {
-        onhover: { enable: true, mode: "repulse" }
-      }
-    }
-  });
-</script>
