--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,7 @@ layout: default
 <article class="post container-fluid px-0">
 
   {% if page.hero_image %}
-    <div class="post-hero-image w-100 mb-5 position-relative"
+    <div class="post-hero-image d-flex align-items-center justify-content-center text-center w-100 mb-5 position-relative"
       style="background-image: url('{{ page.hero_image | relative_url }}');
             background-size: cover;
             background-position: center;
@@ -17,8 +17,8 @@ layout: default
         style="z-index: 0;"></div>
 
       <!-- Contenido centrado -->
-      <div class="container px-4 px-lg-5 text-center" style="position: relative; z-index: 2;">
-        <div class="text-center bg-opacity-50 p-4 rounded">
+      <div class="container px-4 px-lg-5" style="position: relative; z-index: 2;">
+        <div class="bg-dark bg-opacity-50 p-4 rounded text-white">
           <h1 class="display-3 fw-bold text-verde-1">{{ page.title }}</h1>
           {% if page.subtitle %}
             <p class="lead mb-4">{{ page.subtitle }}</p>
@@ -27,6 +27,7 @@ layout: default
       </div>
     </div>
   {% endif %}
+
 
   <div class="container py-5">
     <!-- Información del post -->
