--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,7 +18,7 @@ layout: default
 
       <!-- Contenido centrado -->
       <div class="container px-4 px-lg-5" style="position: relative; z-index: 2;">
-        <div class="hero-box p-4 rounded">
+        <div class="text-box p-4 rounded">
           <h1 class="display-3 fw-bold text-verde-1">{{ page.title }}</h1>
           {% if page.subtitle %}
             <p class="lead mb-4">{{ page.subtitle }}</p>
